--- a/package.json
+++ b/package.json
@@ -16,20 +16,11 @@
     "s": "npm run start",
     "go": "node -r @swc-node/register $(pwd)/src/day$d/index.ts"
   },
-  "dependencies": {
-    "axios": "1.6.0",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.14.0",
-    "dotenv": "16.3.1",
-    "ts-node": "10.9.1"
-  },
   "devDependencies": {
     "@swc-node/register": "^1.6.8",
     "@swc/core": "^1.3.100",
     "@swc/jest": "^0.2.29",
-    "@types/dotenv": "8.2.0",
     "@types/jest": "29.5.2",
-    "@types/node": "20.3.3",
     "@typescript-eslint/eslint-plugin": "5.61.0",
     "@typescript-eslint/parser": "5.61.0",
     "eslint": "8.44.0",
@@ -37,7 +28,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "jest": "^29.6.0",
-    "ts-jest": "29.1.1",
     "typescript": "5.3.2"
+  },
+  "dependencies": {
+    "yarn": "^1.22.21"
   }
 }
