--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:fix": "eslint . --fix",
     "test": "jest --silent=false --verbose=true --maxWorkers=1",
     "t": "npm run test",
-    "compile": "tsc -p tsconfig.build.json",
+    "compile": "npx swc src -d dist",
     "c": "npm run compile",
     "start": "node dist/todo",
     "cs": "npm run compile && npm run start",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@swc-node/register": "^1.6.8",
+    "@swc/cli": "^0.1.63",
     "@swc/core": "^1.3.100",
     "@swc/jest": "^0.2.29",
     "@types/jest": "29.5.2",
